# chronos-markets1

./: .env  .env.example  .gitignore  App.tsx  Dockerfile  INTEGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  compose.yaml  deploy-testnet.sh  index.html  index.tsx  metadata.json  package-lock.json  package.json  quick-start.sh  run.bash  tailwind.config.js  types.ts  vercel.json  vite.config.ts
components/: AgentHubPage.tsx  CombosPage.tsx  CreateMarketPage.tsx  Footer.tsx  Header.tsx  HomePage.tsx  IntegrationTest.tsx  MarketPage.tsx  MarketsPage.tsx  PortfolioPage.tsx  SocialFeedPage.tsx  icons.tsx
contexts/: WalletContext.tsx
linera-app/: BUILD_STATUS.md  Cargo.toml  README.md  build.sh
linera-app/contract/: Cargo.toml
linera-app/contract/src/: contract_new.rs  lib.rs  state.rs  state_new.rs
linera-app/service/: Cargo.toml
linera-app/service/src/: lib.rs  state.rs
linera-app/src/: lib.rs
services/: chronosContract.ts  lineraClient.ts  lineraService.ts  marketService.ts  mockApi.ts
src/: index.css  vite-env.d.ts
src/hooks/: index.ts  useAgents.ts  useCopyTrading.ts  useLeaderboard.ts  useLineraConnection.ts  useMarkets.ts  useNotifications.ts  usePortfolio.ts  usePortfolioAnalytics.ts  usePriceAlerts.ts  useRealTimePrice.ts  useSocialFeed.ts  useTradingAgents.ts  useUserProfile.ts  useWatchlist.ts
src/lib/: index.ts
src/lib/agents/: index.ts  tradingAgents.ts
src/lib/alerts/: index.ts  priceAlerts.ts
src/lib/charts/: AdvancedChart.tsx  index.ts  indicators.ts
src/lib/chronos/: chronosApi.ts  index.ts  queries.ts  types.ts
src/lib/linera/: index.ts  lineraAdapter.ts  signers.ts  (+1 more)
(+16 files in other folders)
