[workspace]
members = [".", "contract", "service"]
resolver = "2"

[package]
name = "chronos-market"
version = "0.1.0"
edition = "2021"
authors = ["Chronos Markets Team"]
license = "Apache-2.0"

[dependencies]
async-graphql = "7.0.11"
linera-sdk = "0.15.6"
serde = { version = "1.0.215", features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chronos Markets Team"]
license = "Apache-2.0"

[workspace.dependencies]
async-graphql = "7.0.11"
linera-sdk = "0.15.6"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.9"

[profile.release]
debug = false
lto = true
opt-level = "z"
strip = true
